--- a/consult/letter3.html
+++ b/consult/letter3.html
@@ -15,64 +15,66 @@
 				<img src="letter3/cup-icon.png" />
 			</div>
 			<p style="color: #7f8c8d; font-size: 16px; text-align: center; margin-top: 20px;">ТОП-5 лучших коучей по итогам прошедшей недели!</p>
-			<div class="consult">
-				<div class="img-container" style="border-radius:110px; width: 110px; height: 110px; overflow: hidden; border:solid 1px #888 ">
+			<div class="consult" style="width:120px; height:210px; margin:0px">
+				<div class="img-container" style="border-radius:110px; width:110px; height:110px; overflow:hidden; border:solid 1px #888; margin:0px">
 					<img src="letter3/01.jpg" style="display:block; width: 100%;"/>
 				</div>
-				<p class="name">
-					<a href="#"><span>Кокорев</span><br />Александр</a>
+				<p class="name" style="text-align:center">
+					<a href="#" style="color:#4ad0c5; font-size:10px; font-weight:700; line-height:16px; text-decoration:underline"><span style="text-transform:uppercase">Кокорев</span><br />Александр</a>
 				</p>
-				<div class="rating">
-					<span class="value">8</span>/10
+				<div class="rating" style="background:url(letter3/rating-bg.png) no-repeat; width:60px; height:37px; color:#b9d4cc; text-align:center; padding-top:5px; margin-left:25px">
+					<span class="value" style="color:#ffaa3e; text-align:center">8</span>/10
 				</div>
 			</div>
 		</div>	
 		<div class="library">
-			<h2 style="color:  #2c3e50; font-size: 24px; font-weight: 400; border-left:10px solid #4ad0c5; line-height:18px; padding-left: 5px;">Новинки библиотеки</h2>
+			<h2 style="color:  #2c3e50; font-size: 24px; font-weight: 400; border-left:10px solid #4ad0c5; line-height:18px; padding-left: 5px; margin:90px 0px 0px 0px">Новинки библиотеки</h2>
 			<div class="articles">
-				<div class="article">
-					<div class="img-container">
+				<div class="article" style="width: 450px; margin:auto">
+					<div class="img-container" style="float:left; margin-right:20px">
 						<img src="letter3/placeholder.jpg" alt="">
 					</div>
 					<div class="text">
-						<h3>Как выйти замуж</h3>
-						<p>
+						<h3 style="color:#2c3e50; font-size:16px; font-weight:400; line-height:24px; text-align: left">Как выйти замуж</h3>
+						<p style="color:#7f8c8d; font-size:14px; font-weight:400; line-height:24px; text-align:left">
 							Ты долго ждала и искала, но то не так и это не эдак. Как же стать счастливой и найти свою вторую половинку…. 
+							<a href="#" style="color:#4ad0c5;">Читать далее</a>
 						</p>
-						<a href="#">Читать далее</a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="questions">
-			<h2>Отвечает консультант</h2>
+			<h2 style="color:#2c3e50; font-size:24px; font-weight:400; line-height:22px; text-align:left; border-left:10px solid #4ad0c5; line-height:18px; padding-left: 5px; margin:90px 0px 0px 0px">Отвечает консультант</h2>
 			<div class="item">
 				<div class="question" style="background: #f9f9f9; padding-top: 30px; padding-bottom: 30px;">
-					<div class="text" style="width: 450px;margin:auto;padding-left: 50px; background: url('letter3/quote.png') no-repeat left top;color: #7f8c8d; font-size: 14px; font-style: italic; line-height:24px">
+					<div class="text" style="width: 450px; margin:auto; padding-left: 50px; background: url('letter3/quote.png') no-repeat left top;color: #7f8c8d; font-size: 14px; font-style: italic; line-height:24px">
 						Здравствуйте. Пишу вам, а сама рыдаю. Я очень люблю своего мужа. Мы с ним прожили вместе 3 года. Но недавно, примерно пол года назад, я устроилась на новую работу. По началу было терпимо, но последние три месяца я просто не вылезала из офиса. Постоянно были какие-то срочные дела, что-то нужно было доделывать, чуть ли не ночью. И так случилось, что мы с мужем почти не виделись…
 					</div>
 				</div>
-				<div class="answer">
-					<div class="author">
-						<div class="img-container">
+				<div class="answer" style="width: 450px; margin:auto">
+					<div class="author" style="float:left; margin-right: 45px;">
+						<div class="img-container" style="border-radius:110px; width:110px; height:110px; overflow:hidden">
 							<img src="letter3/01.jpg" alt="">
 						</div>
-						<p>Отвечает:</p>
-						<a href="#" class="name"><span>Кокорев</span> <br />Александр</a>
+						<p style="color: #2c3e50; font-size: 12px; font-weight: 600; line-height: 24px; text-align: center">Отвечает:</p>
+						<p class="name" style="text-align:center">
+							<a href="#" class="name" style="color:#4ad0c5; font-size:10px; font-weight:700; line-height:16px; text-decoration:underline"><span style="text-transform:uppercase">Кокорев</span> <br />Александр</a>
+						</p>
 					</div>
-					<div class="text">
-						<div>
+					<div class="text" stule="margin-left:45px">
+						<div style="color: #7f8c8d; font-size: 14px; font-weight: 400; line-height: 24px; text-align: left">
 							Здравствуйте, Юлия.<br />
 							Ситуация когда мы хотим чтобы нас поняли и морально поддержали, разделяли с нами наши радости и новизну жизненных перемен, мне хорошо знакома. Вы устроились на работу, возможно давно желая этого, и в вашем восклицании «Неужели он не понимает» слышится именно такая потребность – быть понятой и принятой. И это естественно. Но парадокс в том, что вашему мужу сейчас тоже нужно понимание и принятие его переживаний. 
+							<a href="#" style="color:#4ad0c5;">Читать далее</a>
 						</div>
-						<a href="#">Читать далее</a>
 					</div>
 				</div>
 			</div>
 		</div>
-		<p>
+		<p style="width: 450px; margin:auto; color: #7f8c8d; font-size: 12px; font-weight: 400; line-height: 18px; text-align: center;">
 			Вы получили это сообщение, так как ранее подписались на рассылку сайта “Консультации выпускников ШК Константина Довлатова”. Если Вы желаете отказаться от дальнейших рассылок, то нажмите ссылку для отписки.<br />
-			<a href="#">Отписаться от рассылки</a> 
+			<a href="#" style="color:#4ad0c5; text-decoration:none">Отписаться от рассылки</a> 
 		</p>
 	</div>
 </body>
