--- a/consult/letter4.html
+++ b/consult/letter4.html
@@ -7,7 +7,9 @@
 	<div class="container" style="width:600px; ">
 		<div class="top" style="background: #f9f9f9;padding-top: 1px;">
 			<div class="logo" style="text-align:center; margin-top:20px">
-				<img src="http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/logo.png" alt="">
+				<a href="http://consult4me.ru" target="_blank">
+					<img src="http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/logo.png" alt="">
+				</a>
 			</div>
 			<h1 style="color:  #2c3e50; font-size: 26px; font-weight: 400; text-align: center; margin-top: 40px;margin-bottom: 10px;">Здравствуйте</h1>
 			<div style="width: 100px;height: 1px;margin: auto;background: #eff0f0;"></div>
@@ -62,10 +64,10 @@
 				</div>
 				<div class="consult" style="width:110px; height:210px; margin:20px 25px; float: left;position: relative;">
 					<div class="img-container" style="border-radius:110px; width:110px; height:110px; overflow:hidden; border:solid 1px #888; margin:0px">
-						<img src="http://www.consult4me.ru/data/small/1436355486307977567.jpg" style="display:block; width: 100%;"/>
+						<img src="http://www.consult4me.ru/data/small/14358585331965885592.jpg" style="display:block; width: 100%;"/>
 					</div>
 					<p class="name" style="text-align:center; margin: 12px 0;">
-						<a href="http://www.consult4me.ru/consultants/417/" style="color:#4ad0c5; font-size:10px; font-weight:700; line-height:16px; text-decoration:underline"><span style="text-transform:uppercase">Потёмкина</span><br />Анна</a>
+						<a href="http://www.consult4me.ru/consultants/314/" style="color:#4ad0c5; font-size:10px; font-weight:700; line-height:16px; text-decoration:underline"><span style="text-transform:uppercase">Кирилюк</span><br />Ольга</a>
 					</p>
 					<div class="rating" style="display: none;background:url(http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/rating-bg.png) no-repeat; width:60px; height:37px; color:#b9d4cc; text-align:center; padding-top:5px; margin: auto;">
 						<span class="value" style="color:#ffaa3e; text-align:center">8</span>/10
@@ -91,7 +93,7 @@
 				</div>
 				<div class="article" style="width: 450px; margin:auto; margin-bottom: 20px;">
 					<div class="img-container" style="float:left; margin-right:20px; margin-top: 3px; width: 140px;height: 100px; overflow: hidden;border-radius:5px">
-						<img src="http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/placeholder.jpg" alt="" style="display: block; width: 100%;">
+						<img src="http://www.consult4me.ru/data/images/%20%D1%81%D0%BD%D1%8F%D1%82%D1%8C%20%D0%BE%D0%B3%D1%80%D0%B0%D0%BD%D0%B8%D1%87%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%BD%D0%B0%20%D0%B4%D0%B5%D0%BD%D1%8C%D0%B3%D0%B8.jpg" alt="" style="display: block; width: 100%;">
 					</div>
 					<div class="text" style="overflow: hidden;">
 						<h3 style="color:#2c3e50; font-size:16px; font-weight:400; line-height:24px; text-align: left;margin-top: 0;padding-top: 0;">Как снять ограничения на деньги?</h3>
