--- a/letter100days/letter100days.html
+++ b/letter100days/letter100days.html
@@ -6,12 +6,10 @@
 	<body>
 		<div class="bg" style="padding:30px 0 50px 0; margin:0; font-family:Arial, sans-serif; width: 100%; background: url(http://markup.beta.software-dowlatow.ru/letter100days/bg1.png)">
 			<div class="container" style="width: 684px; margin:auto;">
-				<div class="top" style="background: url(http://markup.beta.software-dowlatow.ru/letter100days/bg-top.png) no-repeat; height: 505px;">
+				<div class="top" style="background: url(http://markup.beta.software-dowlatow.ru/letter100days/bg-top1.png) no-repeat; height: 505px;">
 					<div class="title" style="font-family: sans-serif; color: #ffffff; font-size: 16px; font-weight: 400; text-align: center; line-height: 48px; padding-top: 20px;">
 						Проект «100 трансформаций»
 					</div>
-					<div class="sale" style="background: url(http://markup.beta.software-dowlatow.ru/letter100days/sale.png) no-repeat; height: 240px; margin-top: 65px; margin-left: 260px;"><img src="http://markup.beta.software-dowlatow.ru/letter100days//blank.png" /></div>
-					<div class="hello" style="font-family: sans-serif; color: #ffffff; font-size: 28px; font-weight: 400; line-height: 12px; text-align: right; margin-top: 35px; margin-right: 50px;">Здравствуйте!<br><br><br><span style="font-size: 18px; line-height: 12px;">На связи Константин Довлатов</span></div>
 				</div>
 				<div style="background:#fff; width:680px; position: relative; margin-left: 3px; padding-top:5px">
 					<p style="font-family: sans-serif; color: #5c6770; font-size: 16px; font-weight: 400; line-height: 22px; text-align: center; margin: 40px 60px 0 60px;">
