--- a/100_mainpage/index.html
+++ b/100_mainpage/index.html
@@ -79,7 +79,13 @@
 				</ul>
 				<div class="clr"></div>
 				<div class="y-sidebar">
-					123123
+					<div class="y-searchform" title="">
+					    <form method="get" ifaviconffd="searchform" action="http://club.dowlatow.ru/"> 
+							<input type="submit" value="" class="searchbtn">
+					        <input type="text" value="Поиск" class="searchtxt" name="s" id="s" onblur="if (this.value == '')  {this.value = 'Поиск';}" onfocus="if (this.value == 'Поиск') {this.value = '';}">
+							<div style="clear:both"></div>
+					    </form>
+					</div>
 				</div>
 				<div class="y-content-container">
 				<!-- СЛАЙДЕР -->
@@ -152,7 +158,38 @@
 						<a href="" class="y-buttonn">Пройти тест</a>
 						<div class="clr"></div>
 					</div>
+				</div>				
+			</div>
+			<div class="y-subscribe">
+				<form class="y-subscribe-form">
+					<img src="images/fillet.png" alt="">
+					<p class="y-form-header">Подпишитесь на самое главное!</p>
+					<p>Письма о духовном развитии, финансовом успехе и отношениях с людьми</p>
+					<input type="text" name="email" placeholder="Введите ваш e-mail">
+					<input type="text" name="name" placeholder="Имя">
+					<input type="submit" name="submit" value="Подписаться">
+				</form>
+			</div>
+			<div class="footer">
+				<p>Служба поддержки работает с 10:00 - 24:00 мск</p>
+				<div class="y-email">
+					<p>e-mail: <br><span>support@dowlataw.ru</span></p>
 				</div>
+				<div class="y-phone">
+					<p>телефон: <br><span>8-800-301-00-77 / +7 (499) 301-00-77</span></p>
+				</div>
+				<div class="y-site">
+					<p>служба поддержки: <br><span>kdowlatow.support-desk.ru</span></p>
+				</div>
+				<div class="clr"></div>
+				<a href="" class="y-link">Договор оферты</a>
+				<a href="" class="y-link">Уведомление о безопасности платежа</a>
+				<a href="" class="y-link">Помощь</a>
+				<div class="clr"></div>
+				<img src="images/partners/visa.png" alt="">
+				<img src="images/partners/uniteller.png" alt="">
+				<img src="images/partners/mastercard.png" alt="">
+				<p class="y-fuuter">© 2015 100 дней. Плавная трансформация себя - Авторский проект К.Давлатова</p>
 			</div>
 		</div>
 	</body>
