cinderella правка, cinderella-club

--- a/cinderella-club/index.html
+++ b/cinderella-club/index.html
@@ -95,31 +95,15 @@
 					</ul>
 				</div>
 				<div class="clr"></div>
-				<h1>Условия участия</h1>
-				<p>Вебинар закрытый – только для членов Клуба 100 дней и пользователей имеющих специальный билет.</p>
-				<div class="ny-webinar ny-form">
+				<div class="ny-important">
 					<div class="ny-container">
-						<h2>Вебинар</h2>
-						<div class="ny-price">
-							<h4>1 500 руб</h4>
-							<a href="" class="ny-button-mini">Купить билет</a>
-						</div>
-						<p><span>Позволяет посетить <br>1 вебинар</span></p>
-					</div>
+						<div class="ny-text">
+							<h1>Важно!</h1>
+							<p>Вебинар закрытый – только для членов Клуба 100 дней. Поэтому стоит продлить подписку в Клубе, если она заканчивается до 24 декабря.</p>
+							<p>Ссылку на трансляцию вебинара вы получите <br>в день его начала – 24 декабря.</p>
+						</div>						
+					</div>					
 				</div>
-				<div class="ny-clab ny-form">
-					<div class="ny-container">
-						<h2>Клуб</h2>
-						<div class="ny-price">
-							<h4>от 1 490 руб</h4>
-							<a href="" class="ny-button-mini">Вступить в клуб</a>
-						</div>
-						<p><span>Позволяет посетить <br>2 вебинара в месяц</span></p>
-						<img src="images/icon-plus.png">
-						<p>Вы также получите обучающие курсы Константина Довлатова и новые реинтеграции, чтобы ускорить своё развитие</p>
-					</div>
-				</div>
-				<div class="clr"></div>
 			</div>
 		</div>
 	<!--======================================================================-->
